@@ -1,8 +1,10 @@
 debathena-discuss (10.0.8-0debathena1) unstable; urgency=low
 
   * Add one-character aliases to discuss. Patch by Ben Kaduk. (Trac: #238)
+  * Squash some lintian warnings by switching from ${Source-Version} to
+    ${source:Version} and ${binary:Version}
 
- -- Evan Broder <broder@mit.edu>  Mon, 18 May 2009 18:09:10 -0400
+ -- Evan Broder <broder@mit.edu>  Mon, 18 May 2009 18:23:53 -0400
 
 debathena-discuss (10.0.7-0debathena3) unstable; urgency=low
 
